added header and navigation to the main index.html page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebDevs | Portfolio</title>
+    <title>WebDev | Portfolio</title>
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="navigation">
+            <ul>
+                <li>Landing Pages</li>
+                <li>CRUD</li>
+                <li>APIs</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
