--- a/index.html
+++ b/index.html
@@ -4,17 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebDev | Portfolio</title>
+    <title>WebDevs | Portfolio</title>
 </head>
 <body>
-    <header class="header">
-        <nav class="navigation">
-            <ul>
-                <li>Landing Pages</li>
-                <li>CRUD</li>
-                <li>APIs</li>
+    <div class="navigation">
+        <input type="checkbox" id="nav-toogle" class="navigation__checkbox">
+
+        <nav class="navigation__nav">
+            <ul class="navigation__list">
+                <li class="navigation__item"><a href="#" class="navigation__link"></a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"></a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"></a></li>
             </ul>
         </nav>
+    </div>
+
+    <header class="header">
+
     </header>
+
+    <main>
+
+    </main>
+
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
